@@ -1,6 +1,8 @@
 Changes 0.9.6.4 -> 
 * NodeManager could not find matching oustanding requests if the state object
   was null.
+* Node.waitForConnectionTimeout() and NodeManager.waitForConnectionTimeout()
+  methods added.
 
 Changes 0.9.6.3 -> 0.9.6.4
 * Fix regression in 0.9.6.3:
